@@ -72,7 +72,7 @@ foreach my $server (keys %server_to_resources)
                     # and besides, we would like to run these tests at install time too!
                     [ '@Author::ETHER' => {
                         server => $server,
-                        installer => 'none',
+                        installer => 'MakeMaker',
                         '-remove' => [ 'Git::GatherDir', 'Git::NextVersion', 'Git::Describe', 'PromptIfStale' ],
                       },
                     ],
@@ -87,6 +87,7 @@ foreach my $server (keys %server_to_resources)
     # check that everything we loaded is in test-requires or run-requires
     all_plugins_are_required($tzil,
         'Dist::Zilla::Plugin::GatherDir',   # used by us here
+        'Dist::Zilla::Plugin::MakeMaker',   # via installer option
         'Dist::Zilla::Plugin::GithubMeta',
         'Dist::Zilla::Plugin::GitHub::Update',
     );
